--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "electron": "^9.0.5",
     "jquery": "^3.5.1",
     "lautfm": "^1.1.1"
+  },
+  "devDependencies": {
+    "electron-packager": "^15.0.0"
   }
 }
